--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
     addEvent('小可爱', '出生已经 ', '1995-07-19', 'anniversary');
     addEvent('捷爸生日', '还有 ', '1968-04-02', 'countdown');
     addEvent('捷妈生日', '还有 ', '1968-04-09', 'countdown');
+    addEvent('凡爸生日', '还有 ', '1971-11-25', 'countdown');
+    addEvent('凡妈生日', '还有 ', '1975-02-30', 'countdown');
+    addEvent('子睦生日', '还有 ', '2013-05-09', 'countdown');
+    addEvent('霞子生日', '还有 ', '1993-10-08', 'countdown');
     addEvent('大可爱生日', '还有 ', '1991-11-21', 'countdown');
     addEvent('小可爱生日', '还有 ', '1995-07-19', 'countdown');
     addEvent('距离退休', '还有 ', '2070-12-31', 'countdown');
